<resources>
    <string name="app_name" translatable="false">ImageSafe</string>

    <string name="SHARED_PREFS" translatable="false">SESSION_PREFS</string>
    <string name="login_key" translatable="false">login_key</string>
    <string name="password_key" translatable="false">password_key</string>
    <string name="email_key" translatable="false">email_key</string>
    <string name="THEME_PREFS" translatable="false">THEME_PREFS</string>
    <string name="theme_key" translatable="false">theme_key</string>

    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="sign_up">Sign up here</string>
    <string name="prompt_email" translatable="false">Email</string>

    <string name="not_all">Not all data</string>
    <string name="wait_sign_up">Signing up…</string>
    <string name="wait_sign_in">Signing in…</string>
    <string name="taken">Login taken</string>
    <string name="wrong">Wrong login or password</string>
    <string name="success">Operation successful</string>
    <string name="do_not_match">Passwords doesn\'t match</string>

    <string name="button_sign_up">Sign up</string>
    <string name="info">Do not forget your login data!</string>

    <string name="hello">Hello</string>
    <string name="browse">Browse photos</string>
    <string name="add_photos">Add photos</string>
    <string name="select_image">Select images</string>
    <string name="logout">Logout</string>
    <string name="remove">Remove photo from safe</string>

    <string name="content_description">image in safe</string>
    <string name="title_activity_settings">Settings</string>

    <string name="language_header">Language</string>
    <string name="language_title">App language</string>

    <string name="theme_header">Theme</string>
    <string name="theme_title">Choose theme</string>

    <string name="account_header">Account</string>

    <string name="account_delete_title">Delete account</string>
    <string name="account_delete_message">Enter password to confirm</string>

    <string name="account_recovery_title">Recovery email</string>
    <string name="account_recovery_message">This email would be used to recover password</string>

    <string name="wrong_pass">Wrong password</string>
    <string name="deleting">Deleting account…</string>

    <string name="recover_pass">Recover password</string>
    <string name="recovery_forgot">Forgot password?</string>
    <string name="recovery_text">If you have previously configured the restore related settings password by entering your e-mail address, the forgotten password will be sent in the notification. Otherwise, you won\'t be able to recover your account.</string>
    <string name="recover">Recover</string>
    <string name="recovery_title">Recovery password</string>

    <string name="wrong_email">Wrong email or login</string>

    <string name="notification_title">Hello, we have your password</string>
    <string name="notification_message">Your forgotten password is: %s</string>

</resources>