<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/theme_header">

        <ListPreference
            app:defaultValue="default"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_header">

        <EditTextPreference
            android:key="account_delete"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/account_delete_title"
            android:dialogMessage="@string/account_delete_message"/>

    </PreferenceCategory>
</PreferenceScreen>